Fix broken styles

--- a/static/app/styles/landing.css
+++ b/static/app/styles/landing.css
@@ -1,8 +1,3 @@
-body {
-  padding-top: 0;
-  padding-bottom: 0;
-}
-
 .r {
   font-family: 'Righteous', sans-serif;
 }
